--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@
 	--sidebar-border: oklch(0.922 0 0);
 	--sidebar-ring: oklch(0.708 0 0);
 }
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@custom-variant dark (&:where(.dark, .dark *));
 
 @media (prefers-color-scheme: dark) {
 	:root {
@@ -211,4 +211,9 @@
 
 .carousel-track-phone {
 	animation: scroll-x-phone 20s linear infinite;
+}
+
+/*my custom utility classes */
+.middle {
+	@apply items-center justify-center flex;
 }
